# py-aiger-cnf

./: .drone.yml  README.md  pyproject.toml
aiger_cnf/: __init__.py  cnf.py  test_cnf.py
