[tool.poetry]
name = "py-aiger-cnf"
readme="README.md"
version = "5.0.7"
repository = "https://github.com/mvcisback/py-aiger-cnf"
description = "Python library to convert between AIGER and CNF"
authors = ["Marcell Vazquez-Chanlatte <mvc@linux.com>"]
license = "MIT"
packages = [
    { include = "aiger_cnf" },
]

[tool.poetry.dependencies]
python = "^3.7"
bidict = "^0.22.0"
funcy = "^1.12"
py-aiger = "^6.0.0"

[tool.poetry.dev-dependencies]

hypothesis_cfg = {git = "https://github.com/mvcisback/hypothesis-cfg.git"}
hypothesis = "^6.0.0"
pytest-xdist = "^3.0.0"
python-sat = "^0.1.6.dev6"
py-aiger-ptltl = "^3.0.0"
parsimonious = "^0.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
